# Learn-Computer-Graphics

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  test.c
src/: gcl_attrib.h  gcl_geometry.c  gcl_geometry.h  gcl_init.c  gcl_init.h  gcl_math.c  gcl_math.h
